# oipie-api-core-fastapi

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/workflows/: auto-review.yaml  pull_request.yaml
scripts/: create-multiple-postgresql-databases.sh
src/: conftest.py  main.py
src/api/routers/: get_user_token.py
src/api/routers/health/: health.py
src/api/routers/recipes/: recipes.py
src/api/routers/recipes/models/: recipe_create_dto.py  recipe_out.py  recipe_response_dto.py
src/api/routers/users/: users.py
src/api/routers/users/models/: user_create_dto.py  user_login_in.py  user_login_out.py  user_response_dto.py
src/config/: database.py  jwt.py
src/config/migrations/: env.py
src/config/migrations/versions/: 1666783928_031811878407_create_recipes_table.py  1667476313_0a786bd8d27c_create_users_table.py  1668451725_5fd85e581309_add_relationship_between_recipes_users.py
src/core/recipes/application/: recipes_creator.py  recipes_lister.py  test_recipes_creator.py  test_recipes_lister.py
src/core/recipes/domain/: recipe.py  recipes_repository.py  test_recipe.py
src/core/recipes/infrastructure/: dependencies.py  recipe_model.py  recipes_repository_fake.py  recipes_repository_sqlalchemy.py  test_recipes_repository_sqlalchemy.py
src/core/shared/domain/: base_exception.py
src/core/shared/infrastructure/: domain_exception_category.py  domain_exception_category_http_mapper.py  domain_exception_code.py
src/core/shared/services/password/: argon2_password.py  dependencies.py  password.py  plain_text_password.py
src/core/shared/services/tokenizer/: dependencies.py  jwt_tokenizer.py  tokenizer.py
src/core/shared/services/tokenizer/errors/: invalid_token_error.py
src/core/users/application/: test_users_finder.py  test_users_login.py  test_users_registerer.py  users_finder.py  users_login.py  users_registerer.py
src/core/users/domain/: test_user.py  user.py  users_repository.py
src/core/users/domain/errors/: user_credentials_error.py  user_not_found_error.py  user_with_email_already_exists_error.py  user_with_nickname_already_exists_error.py
src/core/users/infrastructure/: dependencies.py  test_user_repository_sqlalchemy.py  user_model.py  user_repository_fake.py  user_repository_sqlalchemy.py
src/dependencies/: database.py
src/shared/models/: paginated_model.py  user_token_data.py
src/tests/: conftest.py
src/tests/fixtures/: recipe_fixture.py  user_fixture.py
src/tests/utils/: api_client.py
src/tests/v1/recipes/: test_create_recipes.py  test_index_recipes.py
src/tests/v1/users/: test_create_users.py  test_get_me.py  test_login_users.py
