[tool.poe.tasks]
format = "black ."
"format:check" = "black --check ."
lint = "pylint --output-format colorized src/**/*.py"
"lint:check" = "pylint src/**/*.py"
"migration:up" = { "cmd" = "alembic upgrade head", "envfile" = ".env" }
"migration:down" = { "cmd" = "alembic downgrade head-1", "envfile" = ".env" }
"migration:test:up" = { "cmd" = "alembic upgrade head", "env" = { DATABASE_NAME = "oipie_tests" } }
"migration:test:down" = { "cmd" = "alembic downgrade head-1", "env" = { DATABASE_NAME = "oipie_tests" } }
"run:checks" = ["format:check", "lint:check"]
"start:dev" = "uvicorn src.main:app --reload"
test = "pytest"

  [tool.poe.tasks."migration:generate"]
  cmd="alembic revision --autogenerate -m $message"
  args=[{ name = "message", options = ["-m", "--message"], required = true, help = "Migration's name" }]

[tool.poetry]
name = "oipie-api-core"
version = "0.1.0"
description = ""
authors = ["Jaume Moreno <morenocantoj@gmail.com>", "Jorge Bodega <jorge@acidtango.com>"]
readme = "README.md"
packages = [{include = "oipie_api_core"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
SQLAlchemy = "^1.4.42"
databases = "^0.6.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.4"
alembic = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
python-dotenv = "^0.21.0"
black = "^22.10.0"
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
