[tool.poe.tasks]
format = "black ."
"format:check" = "black --check ."
lint = "pylint --output-format colorized src/**/*.py"
"lint:check" = "pylint src/**/*.py"
"migration:up" = { "cmd" = "alembic upgrade head", "envfile" = ".env" }
"migration:down" = { "cmd" = "alembic downgrade head-1", "envfile" = ".env" }
"migration:test:up" = { "cmd" = "alembic upgrade head", "env" = { DATABASE_NAME = "oipie_tests" } }
"migration:test:down" = { "cmd" = "alembic downgrade head-1", "env" = { DATABASE_NAME = "oipie_tests" } }
mypy = "mypy src"
"run:checks" = ["format:check", "lint:check"]
"start:dev" = "uvicorn src.main:app --reload"
test = "pytest"
"test:cov" = "pytest --cov=src"
"test:cov:html" = "pytest --cov=src --cov-report=html"

[tool.poe.tasks."migration:generate"]
cmd = "alembic revision --autogenerate -m $message"
args = [
  { name = "message", options = [
    "-m",
    "--message",
  ], required = true, help = "Migration's name" },
]

[tool.poetry]
name = "oipie-api-core"
version = "0.0.1"
description = ""
authors = [
  "Jaume Moreno <morenocantoj@gmail.com>",
  "Jorge Bodega <jorge@acidtango.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "1.8.1"
databases = { extras = ["asyncpg"], version = "0.6.1" }
fastapi = { extras = ["all"], version = "0.86.0" }
psycopg2-binary = "2.9.5"
python = "^3.10"
SQLAlchemy = "1.4.42"


[tool.poetry.group.dev.dependencies]
black = "22.10.0"
mypy = "0.982"
pylint = "2.15.5"
pytest = "7.2.0"
pytest-cov = "4.0.0"
python-dotenv = "0.21.0"
sqlalchemy-stubs = "0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
