[tool.isort]
profile = "black"
skip_glob = ["src/config/**/*.py"]

[tool.poe.tasks]
format = "black ."
"format:check" = "black --check ."
isort = "isort ."
"isort:check" = "isort --check ."
lint = "pylint --output-format colorized src/**/*.py"
"lint:check" = "pylint src/**/*.py"
"migration:up" = { "cmd" = "alembic upgrade head", "envfile" = ".env" }
"migration:down" = { "cmd" = "alembic downgrade head-1", "envfile" = ".env" }
"migration:test:up" = { "cmd" = "alembic upgrade head", "env" = { DATABASE_NAME = "oipie_tests" } }
"migration:test:down" = { "cmd" = "alembic downgrade head-1", "env" = { DATABASE_NAME = "oipie_tests" } }
"run:checks" = ["format:check", "lint:check", "isort:check"]
"start:dev" = "uvicorn src.main:app --reload"
test = "pytest"
"test:cov" = "pytest --cov=src"
"test:cov:html" = "pytest --cov=src --cov-report=html"

[tool.poe.tasks."migration:generate"]
cmd = "alembic revision --autogenerate -m $message"
args = [
  { name = "message", options = [
    "-m",
    "--message",
  ], required = true, help = "Migration's name" },
]

[tool.poetry]
name = "oipie-api-core"
version = "0.0.1"
description = ""
authors = [
  "Jaume Moreno <morenocantoj@gmail.com>",
  "Jorge Bodega <jorge@acidtango.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "1.8.1"
argon2-cffi = "21.3.0"
databases = { extras = ["asyncpg"], version = "0.6.1" }
fastapi = { extras = ["all"], version = "0.106.0" }
PyJWT = "2.6.0"
python = "^3.10"
SQLAlchemy = { extras = ["postgresql_psycopg2binary"], version = "1.4.44" }


[tool.poetry.group.dev.dependencies]
black = "22.10.0"
isort = "5.10.1"
pylint = "2.15.5"
pytest = "7.2.0"
pytest-cov = "4.0.0"
python-dotenv = "0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
